PN-1429: add multiple dest test